# MicrobeAnnotator

./: .gitignore  KO_Mapper  LICENSE  Makefile  MicrobeAnnotator  MicrobeAnnotator.py  MicrobeAnnotator_DB_Builder  README.md  RefSeq_Data_Downloader  RefSeq_Genbank_Parser  SQLite3_Database_Builder  SQLite3_Search.py  UniProt_Data_Downloader  environment.yml  meta.yaml  microbeannotator  microbeannotator.py  microbeannotator_db_builder  microbeannotator_db_builder.py  pre_setup.py  pyproject.toml  pytest.ini  requirements.dev.txr  requirements.txt  salida  setup.cfg  setup.py
00.Data/: 01.KEGG_Regular_Module_Information.pickle  03.KEGG_Structural_Module_Information.pickle
00.Data/01.KEGG_DB/: 00.Module_Names.txt  01.Bifurcating_List.txt  03.Bifurcating_Modules.dict  06.Module_Groups.txt
01.Independent_Scripts/: RefSeq_Data_Downloader  RefSeq_Genbank_Parser  SQLite3_Database_Builder  SQLite3_Search
data/: 02.KEGG_Bifurcating_Module_Information.pickle  kegg_orthology_parser.py  ko00001-1.keg
data/01.KEGG_DB/: 00.KEGG_Data_Scrapper.py  (+5 more)
independent_scripts/: KO_Mapper  Protein_DB_Creation.py  RefSeq_Data_Downloader  RefSeq_Genbank_Parser  SQLite3_Database_Builder  SQLite3_Search  UniProt_Dat_Parser  UniProt_Data_Downloader  __init__.py  conversion_database_creator.py  fasta_filter_list.py  identifier_conversion.py  ko_mapper.py  protein_db_creation.py  protein_search.py  refseq_data_downloader.py  refseq_genbank_parser.py  sqlite3_database_builder.py  sqlite3_search.py  uniprot_dat_parser.py  uniprot_data_downloader.py
microbeannotator/: __init__.py  test.py
(+48 files in other folders)
