[tool.poetry]
name = "microbeannotator"
version = "3.0.0"
description = "Pipeline for metabolic annotation of microbial genomes"
authors = ["Carlos Ruiz <cruiz_perez@hotmail.com>"]
license = "Artistic License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
attrs = "^23.1.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
hypothesis = "^6.82.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
strict_optional = "False"
disallow_untyped_decorators = "False"
disallow_untyped_defs = "True"

[tool.pytest.ini_options]
ignore_missing_imports = "True"
addopts = "-p no:warnings"

[flake8]
max-line-length = 120
